Bug 78193 - polkitagent: No double warnings in polkit_agent_listener_register()
Summary: polkitagent: No double warnings in polkit_agent_listener_register()
Status: RESOLVED FIXED
Alias: None
Product: PolicyKit
Classification: Unclassified
Component: libpolkit (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: David Zeuthen (not reading bugmail)
QA Contact: David Zeuthen (not reading bugmail)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-02 14:41 UTC by Stef Walter
Modified: 2018-04-03 18:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
polkitagent: No double warnings in polkit_agent_listener_register() (1.09 KB, patch)
2014-05-02 14:41 UTC, Stef Walter
Details | Splinter Review

Description Stef Walter 2014-05-02 14:41:41 UTC
The caller of polkit_agent_listener_register() or similar is
    responsible for handling returned errors (and/or print them).
    
    Remove unconditional warning.
Comment 1 Stef Walter 2014-05-02 14:41:44 UTC
Created attachment 98339 [details] [review]
polkitagent: No double warnings in polkit_agent_listener_register()

The caller of polkit_agent_listener_register() or similar is
responsible for handling returned errors (and/or print them).

Remove undconditional warning.
Comment 2 Ray Strode [halfline] 2018-04-03 18:32:12 UTC
Attachment 98339 [details] pushed as 105abaa - polkitagent: No double warnings in polkit_agent_listener_register()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.