polkitagent: No double warnings in polkit_agent_listener_register()

The caller of polkit_agent_listener_register() or similar is
responsible for handling returned errors (and/or print them).

Remove undconditional warning.

https://bugs.freedesktop.org/show_bug.cgi?id=78193